<resources>
    <string name="app_name">Class Attendance</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="spinnerTitle">Login Type</string>
    <string-array name="userType">
        <item>User Type</item>
        <item>Student</item>
        <item>Faculty</item>
        <item>Head of Department</item>
    </string-array>
    <string-array name="semList">
        <item>Select Semester</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="branchList">
        <item>Select Branch</item>
        <item>Mechanical</item>
        <item>Computer</item>
        <item>Automobile</item>
        <item>Electrical</item>
        <item>EC</item>
        <item>Civil</item>
        <item>Information Technology</item>
    </string-array>
    <string-array name="divList">
        <item>Select Division</item>
        <item>A</item>
        <item>B</item>
    </string-array>

    <string name="fullname">Full Name</string>
    <string name="enrollmentnumber">Enrollment Number</string>
    <string name="division">Division</string>
    <string name="fac_id">FacultyId</string>
    <string name="fac_name">Faculty Name</string>
    <string name="cpassword">Confirm Password</string>
    <string name="semester">Semester</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="appLogo">App Logo</string>
    <string name="loginHere">Login Here</string>
    <string name="registerHere">Register Here</string>
    <string name="alreadyAMember">Already a Member?</string>
    <string name="dontHaveAnAccount">Dont have an Account?</string>
    <string name="userNotFound">User Not Found!</string>
</resources>