<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Spinner
        android:id="@+id/loginType"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:spinnerMode="dropdown"
        android:entries="@array/loginType"/>

    <EditText
        android:id="@+id/en"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/enrollmentnumber"
        android:inputType="number"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/facId"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="20dp"
        android:hint="@string/fac_id"
        android:inputType="text"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint=""
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/sem"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/semester"
        android:inputType="number"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/div"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/division"
        android:inputType="textCapCharacters"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/cpassword"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/cpassword"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="Register"/>

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="Back to Login"
        android:textSize="15dp"
        android:textAlignment="center"
        android:textColor="@color/registration"
        android:clickable="true"
        android:onClick="toLogin"
        />

</LinearLayout>